--- a/Plugins/Settings/Settings_ios/Settings/es.lproj/Localizable.strings
+++ b/Plugins/Settings/Settings_ios/Settings/es.lproj/Localizable.strings
@@ -1,45 +1,45 @@
 /* First letter in alphabet */
-"A" = "A";
+"A" = "UN";
 
 /* Bibles view page title
    Section heading for Bibles in one lang */
-"Bibles" = "Bibleses";
+"Bibles" = "Biblias";
 
 /* Bibles search bar */
-"Find Bibles" = "Fond Bibleses";
+"Find Bibles" = "Encuentra Biblias";
 
 /* Languages search bar */
-"Find Languages" = "Find Languageses";
+"Find Languages" = "Encuentra idiomas";
 
 /* User text in message to other */
-"I like it!" = "I like ites!";
+"I like it!" = "¡Me gusta!";
 
 /* Clickable cell title
    Languages view page title */
-"Languages" = "Languageses";
+"Languages" = "Idiomas";
 
 /* Section heading for available Bibles */
-"More Bibles" = "More Bibleses";
+"More Bibles" = "Más Biblias";
 
 /* Section heading for Other languages */
-"More Languages" = "More Languageses";
+"More Languages" = "Más idiomas";
 
 /* Section heading for User selected Bibles */
-"My Bibles" = "My Bibleses";
+"My Bibles" = "Mis Biblias";
 
 /* Section heading for User languages */
-"My Languages" = "My Languageses";
+"My Languages" = "Mis idiomas";
 
 /* Clickable cell title
    Feedback view title */
-"Send Us Feedback" = "Send Us Feedbackes";
+"Send Us Feedback" = "Envianos tus comentarios";
 
 /* Settings view page title */
-"Settings" = "Settingses";
+"Settings" = "Configuraciones";
 
 /* Clickable cell title */
-"Share SafeBible" = "Share SafeBiblees";
+"Share SafeBible" = "Comparte SafeBible";
 
 /* Clickable cell title */
-"Write A Review" = "Write A Reviewes";
+"Write A Review" = "Escribe una reseña";
 
