--- a/Plugins/Settings/Settings_ios/Settings/he.lproj/Localizable.strings
+++ b/Plugins/Settings/Settings_ios/Settings/he.lproj/Localizable.strings
@@ -1,45 +1,45 @@
 /* First letter in alphabet */
-"A" = "一个";
+"A" = "א";
 
 /* Bibles view page title
    Section heading for Bibles in one lang */
-"Bibles" = "圣经";
+"Bibles" = "תנ&quot;ך";
 
 /* Bibles search bar */
-"Find Bibles" = "找圣经";
+"Find Bibles" = "מצא תנ&quot;ך";
 
 /* Languages search bar */
-"Find Languages" = "查找语言";
+"Find Languages" = "מצא שפות";
 
 /* User text in message to other */
-"I like it!" = "我喜欢！";
+"I like it!" = "אני אוהב את זה!";
 
 /* Clickable cell title
    Languages view page title */
-"Languages" = "语言";
+"Languages" = "שפות";
 
 /* Section heading for available Bibles */
-"More Bibles" = "更多圣经";
+"More Bibles" = "עוד ספרי קודש";
 
 /* Section heading for Other languages */
-"More Languages" = "更多语言";
+"More Languages" = "שפות נוספות";
 
 /* Section heading for User selected Bibles */
-"My Bibles" = "我的圣经";
+"My Bibles" = "ספרי התנ&quot;ך שלי";
 
 /* Section heading for User languages */
-"My Languages" = "我的语言";
+"My Languages" = "השפות שלי";
 
 /* Clickable cell title
    Feedback view title */
-"Send Us Feedback" = "向我们发送反馈";
+"Send Us Feedback" = "שלח לנו משוב";
 
 /* Settings view page title */
-"Settings" = "设置";
+"Settings" = "הגדרות";
 
 /* Clickable cell title */
-"Share SafeBible" = "分享SafeBible";
+"Share SafeBible" = "שתף את SafeBible";
 
 /* Clickable cell title */
-"Write A Review" = "写评论";
+"Write A Review" = "כתוב ביקורת";
 
