--- a/Plugins/Settings/Settings_ios/Settings/hr.lproj/Localizable.strings
+++ b/Plugins/Settings/Settings_ios/Settings/hr.lproj/Localizable.strings
@@ -1,45 +1,45 @@
 /* First letter in alphabet */
-"A" = "一个";
+"A" = "";
 
 /* Bibles view page title
    Section heading for Bibles in one lang */
-"Bibles" = "圣经";
+"Bibles" = "Biblije";
 
 /* Bibles search bar */
-"Find Bibles" = "找圣经";
+"Find Bibles" = "Pronađite Biblije";
 
 /* Languages search bar */
-"Find Languages" = "查找语言";
+"Find Languages" = "Pronađite jezike";
 
 /* User text in message to other */
-"I like it!" = "我喜欢！";
+"I like it!" = "Sviđa mi se!";
 
 /* Clickable cell title
    Languages view page title */
-"Languages" = "语言";
+"Languages" = "Jezici";
 
 /* Section heading for available Bibles */
-"More Bibles" = "更多圣经";
+"More Bibles" = "Više Biblije";
 
 /* Section heading for Other languages */
-"More Languages" = "更多语言";
+"More Languages" = "Više jezika";
 
 /* Section heading for User selected Bibles */
-"My Bibles" = "我的圣经";
+"My Bibles" = "Moje Biblije";
 
 /* Section heading for User languages */
-"My Languages" = "我的语言";
+"My Languages" = "Moji jezici";
 
 /* Clickable cell title
    Feedback view title */
-"Send Us Feedback" = "向我们发送反馈";
+"Send Us Feedback" = "Pošaljite nam povratne informacije";
 
 /* Settings view page title */
-"Settings" = "设置";
+"Settings" = "postavke";
 
 /* Clickable cell title */
-"Share SafeBible" = "分享SafeBible";
+"Share SafeBible" = "Dionički SafeBible";
 
 /* Clickable cell title */
-"Write A Review" = "写评论";
+"Write A Review" = "Napišite svoje mišljenje";
 
