--- a/Plugins/Settings/Settings_ios/Settings/hu.lproj/Localizable.strings
+++ b/Plugins/Settings/Settings_ios/Settings/hu.lproj/Localizable.strings
@@ -1,45 +1,45 @@
 /* First letter in alphabet */
-"A" = "一个";
+"A" = "A";
 
 /* Bibles view page title
    Section heading for Bibles in one lang */
-"Bibles" = "圣经";
+"Bibles" = "Bibliák";
 
 /* Bibles search bar */
-"Find Bibles" = "找圣经";
+"Find Bibles" = "Keress Bibles-et";
 
 /* Languages search bar */
-"Find Languages" = "查找语言";
+"Find Languages" = "Nyelvek keresése";
 
 /* User text in message to other */
-"I like it!" = "我喜欢！";
+"I like it!" = "Tetszik!";
 
 /* Clickable cell title
    Languages view page title */
-"Languages" = "语言";
+"Languages" = "Nyelvek";
 
 /* Section heading for available Bibles */
-"More Bibles" = "更多圣经";
+"More Bibles" = "Több Biblia";
 
 /* Section heading for Other languages */
-"More Languages" = "更多语言";
+"More Languages" = "További nyelvek";
 
 /* Section heading for User selected Bibles */
-"My Bibles" = "我的圣经";
+"My Bibles" = "Bibliaim";
 
 /* Section heading for User languages */
-"My Languages" = "我的语言";
+"My Languages" = "Az én nyelvem";
 
 /* Clickable cell title
    Feedback view title */
-"Send Us Feedback" = "向我们发送反馈";
+"Send Us Feedback" = "Küldjön nekünk visszajelzést";
 
 /* Settings view page title */
-"Settings" = "设置";
+"Settings" = "Beállítások";
 
 /* Clickable cell title */
-"Share SafeBible" = "分享SafeBible";
+"Share SafeBible" = "Megosztás SafeBible";
 
 /* Clickable cell title */
-"Write A Review" = "写评论";
+"Write A Review" = "Írja meg a véleményét";
 
