--- a/Plugins/Settings/Settings_ios/Settings/id.lproj/Localizable.strings
+++ b/Plugins/Settings/Settings_ios/Settings/id.lproj/Localizable.strings
@@ -1,45 +1,45 @@
 /* First letter in alphabet */
-"A" = "一个";
+"A" = "SEBUAH";
 
 /* Bibles view page title
    Section heading for Bibles in one lang */
-"Bibles" = "圣经";
+"Bibles" = "Alkitab";
 
 /* Bibles search bar */
-"Find Bibles" = "找圣经";
+"Find Bibles" = "Temukan Alkitab";
 
 /* Languages search bar */
-"Find Languages" = "查找语言";
+"Find Languages" = "Temukan Bahasa";
 
 /* User text in message to other */
-"I like it!" = "我喜欢！";
+"I like it!" = "Saya suka itu!";
 
 /* Clickable cell title
    Languages view page title */
-"Languages" = "语言";
+"Languages" = "Bahasa";
 
 /* Section heading for available Bibles */
-"More Bibles" = "更多圣经";
+"More Bibles" = "Lebih banyak Alkitab";
 
 /* Section heading for Other languages */
-"More Languages" = "更多语言";
+"More Languages" = "Bahasa Lainnya";
 
 /* Section heading for User selected Bibles */
-"My Bibles" = "我的圣经";
+"My Bibles" = "Alkitab saya";
 
 /* Section heading for User languages */
-"My Languages" = "我的语言";
+"My Languages" = "Bahasa saya";
 
 /* Clickable cell title
    Feedback view title */
-"Send Us Feedback" = "向我们发送反馈";
+"Send Us Feedback" = "Kirimi Kami Umpan Balik";
 
 /* Settings view page title */
-"Settings" = "设置";
+"Settings" = "Pengaturan";
 
 /* Clickable cell title */
-"Share SafeBible" = "分享SafeBible";
+"Share SafeBible" = "Bagikan SafeBible";
 
 /* Clickable cell title */
-"Write A Review" = "写评论";
+"Write A Review" = "Menulis review";
 
