--- a/Plugins/Settings/Settings_ios/Settings/ko.lproj/Localizable.strings
+++ b/Plugins/Settings/Settings_ios/Settings/ko.lproj/Localizable.strings
@@ -1,45 +1,45 @@
 /* First letter in alphabet */
-"A" = "一个";
+"A" = "에이";
 
 /* Bibles view page title
    Section heading for Bibles in one lang */
-"Bibles" = "圣经";
+"Bibles" = "성서";
 
 /* Bibles search bar */
-"Find Bibles" = "找圣经";
+"Find Bibles" = "성경 검색";
 
 /* Languages search bar */
-"Find Languages" = "查找语言";
+"Find Languages" = "언어 찾기";
 
 /* User text in message to other */
-"I like it!" = "我喜欢！";
+"I like it!" = "나는 그것을 좋아한다!";
 
 /* Clickable cell title
    Languages view page title */
-"Languages" = "语言";
+"Languages" = "언어";
 
 /* Section heading for available Bibles */
-"More Bibles" = "更多圣经";
+"More Bibles" = "더 많은 성경";
 
 /* Section heading for Other languages */
-"More Languages" = "更多语言";
+"More Languages" = "더 많은 언어";
 
 /* Section heading for User selected Bibles */
-"My Bibles" = "我的圣经";
+"My Bibles" = "내 성서";
 
 /* Section heading for User languages */
-"My Languages" = "我的语言";
+"My Languages" = "내 언어";
 
 /* Clickable cell title
    Feedback view title */
-"Send Us Feedback" = "向我们发送反馈";
+"Send Us Feedback" = "의견 보내기";
 
 /* Settings view page title */
-"Settings" = "设置";
+"Settings" = "설정";
 
 /* Clickable cell title */
-"Share SafeBible" = "分享SafeBible";
+"Share SafeBible" = "SafeBible 공유";
 
 /* Clickable cell title */
-"Write A Review" = "写评论";
+"Write A Review" = "리뷰를 작성";
 
