--- a/Plugins/Settings/Settings_ios/Settings/pl.lproj/Localizable.strings
+++ b/Plugins/Settings/Settings_ios/Settings/pl.lproj/Localizable.strings
@@ -1,45 +1,45 @@
 /* First letter in alphabet */
-"A" = "一个";
+"A" = "ZA";
 
 /* Bibles view page title
    Section heading for Bibles in one lang */
-"Bibles" = "圣经";
+"Bibles" = "Biblie";
 
 /* Bibles search bar */
-"Find Bibles" = "找圣经";
+"Find Bibles" = "Znajdź Biblie";
 
 /* Languages search bar */
-"Find Languages" = "查找语言";
+"Find Languages" = "Znajdź języki";
 
 /* User text in message to other */
-"I like it!" = "我喜欢！";
+"I like it!" = "Lubię to!";
 
 /* Clickable cell title
    Languages view page title */
-"Languages" = "语言";
+"Languages" = "Języki";
 
 /* Section heading for available Bibles */
-"More Bibles" = "更多圣经";
+"More Bibles" = "Więcej Biblii";
 
 /* Section heading for Other languages */
-"More Languages" = "更多语言";
+"More Languages" = "Więcej języków";
 
 /* Section heading for User selected Bibles */
-"My Bibles" = "我的圣经";
+"My Bibles" = "Moje Biblie";
 
 /* Section heading for User languages */
-"My Languages" = "我的语言";
+"My Languages" = "Moje języki";
 
 /* Clickable cell title
    Feedback view title */
-"Send Us Feedback" = "向我们发送反馈";
+"Send Us Feedback" = "Wyślij nam opinie";
 
 /* Settings view page title */
-"Settings" = "设置";
+"Settings" = "Ustawienia";
 
 /* Clickable cell title */
-"Share SafeBible" = "分享SafeBible";
+"Share SafeBible" = "Udostępnij SafeBible";
 
 /* Clickable cell title */
-"Write A Review" = "写评论";
+"Write A Review" = "Napisać recenzję";
 
