--- a/Plugins/Settings/Settings_ios/Settings/ro.lproj/Localizable.strings
+++ b/Plugins/Settings/Settings_ios/Settings/ro.lproj/Localizable.strings
@@ -1,45 +1,45 @@
 /* First letter in alphabet */
-"A" = "一个";
+"A" = "A";
 
 /* Bibles view page title
    Section heading for Bibles in one lang */
-"Bibles" = "圣经";
+"Bibles" = "Biblii";
 
 /* Bibles search bar */
-"Find Bibles" = "找圣经";
+"Find Bibles" = "Găsiți Biblii";
 
 /* Languages search bar */
-"Find Languages" = "查找语言";
+"Find Languages" = "Găsiți limbi";
 
 /* User text in message to other */
-"I like it!" = "我喜欢！";
+"I like it!" = "Imi place!";
 
 /* Clickable cell title
    Languages view page title */
-"Languages" = "语言";
+"Languages" = "Limbile";
 
 /* Section heading for available Bibles */
-"More Bibles" = "更多圣经";
+"More Bibles" = "Mai multe Biblii";
 
 /* Section heading for Other languages */
-"More Languages" = "更多语言";
+"More Languages" = "Mai multe limbi";
 
 /* Section heading for User selected Bibles */
-"My Bibles" = "我的圣经";
+"My Bibles" = "Biblia mea";
 
 /* Section heading for User languages */
-"My Languages" = "我的语言";
+"My Languages" = "Limbile mele";
 
 /* Clickable cell title
    Feedback view title */
-"Send Us Feedback" = "向我们发送反馈";
+"Send Us Feedback" = "Trimiteți-ne feedback";
 
 /* Settings view page title */
-"Settings" = "设置";
+"Settings" = "Setări";
 
 /* Clickable cell title */
-"Share SafeBible" = "分享SafeBible";
+"Share SafeBible" = "Distribuiți SafeBible";
 
 /* Clickable cell title */
-"Write A Review" = "写评论";
+"Write A Review" = "Scrie o recenzie";
 
