--- a/Plugins/Settings/Settings_ios/Settings/sv.lproj/Localizable.strings
+++ b/Plugins/Settings/Settings_ios/Settings/sv.lproj/Localizable.strings
@@ -1,45 +1,45 @@
 /* First letter in alphabet */
-"A" = "一个";
+"A" = "en";
 
 /* Bibles view page title
    Section heading for Bibles in one lang */
-"Bibles" = "圣经";
+"Bibles" = "biblar";
 
 /* Bibles search bar */
-"Find Bibles" = "找圣经";
+"Find Bibles" = "Hitta Biblar";
 
 /* Languages search bar */
-"Find Languages" = "查找语言";
+"Find Languages" = "Hitta språk";
 
 /* User text in message to other */
-"I like it!" = "我喜欢！";
+"I like it!" = "Jag gillar det!";
 
 /* Clickable cell title
    Languages view page title */
-"Languages" = "语言";
+"Languages" = "språk";
 
 /* Section heading for available Bibles */
-"More Bibles" = "更多圣经";
+"More Bibles" = "Fler biblar";
 
 /* Section heading for Other languages */
-"More Languages" = "更多语言";
+"More Languages" = "Flera språk";
 
 /* Section heading for User selected Bibles */
-"My Bibles" = "我的圣经";
+"My Bibles" = "Mina biblar";
 
 /* Section heading for User languages */
-"My Languages" = "我的语言";
+"My Languages" = "Mina språk";
 
 /* Clickable cell title
    Feedback view title */
-"Send Us Feedback" = "向我们发送反馈";
+"Send Us Feedback" = "Skicka oss feedback";
 
 /* Settings view page title */
-"Settings" = "设置";
+"Settings" = "inställningar";
 
 /* Clickable cell title */
-"Share SafeBible" = "分享SafeBible";
+"Share SafeBible" = "Dela SafeBible";
 
 /* Clickable cell title */
-"Write A Review" = "写评论";
+"Write A Review" = "Skriva en recension";
 
