--- a/Plugins/Settings/Settings_ios/Settings/tr.lproj/Localizable.strings
+++ b/Plugins/Settings/Settings_ios/Settings/tr.lproj/Localizable.strings
@@ -1,45 +1,45 @@
 /* First letter in alphabet */
-"A" = "一个";
+"A" = "bir";
 
 /* Bibles view page title
    Section heading for Bibles in one lang */
-"Bibles" = "圣经";
+"Bibles" = "İnciller";
 
 /* Bibles search bar */
-"Find Bibles" = "找圣经";
+"Find Bibles" = "İnciller Bul";
 
 /* Languages search bar */
-"Find Languages" = "查找语言";
+"Find Languages" = "Dilleri Bul";
 
 /* User text in message to other */
-"I like it!" = "我喜欢！";
+"I like it!" = "Bunu sevdim!";
 
 /* Clickable cell title
    Languages view page title */
-"Languages" = "语言";
+"Languages" = "duujjil";
 
 /* Section heading for available Bibles */
-"More Bibles" = "更多圣经";
+"More Bibles" = "Daha İncil";
 
 /* Section heading for Other languages */
-"More Languages" = "更多语言";
+"More Languages" = "Daha fazla dil";
 
 /* Section heading for User selected Bibles */
-"My Bibles" = "我的圣经";
+"My Bibles" = "İncillerim";
 
 /* Section heading for User languages */
-"My Languages" = "我的语言";
+"My Languages" = "Dillerim";
 
 /* Clickable cell title
    Feedback view title */
-"Send Us Feedback" = "向我们发送反馈";
+"Send Us Feedback" = "Bize geri bildirim gönderin";
 
 /* Settings view page title */
-"Settings" = "设置";
+"Settings" = "Ayarlar";
 
 /* Clickable cell title */
-"Share SafeBible" = "分享SafeBible";
+"Share SafeBible" = "Güvenli Paylaş";
 
 /* Clickable cell title */
-"Write A Review" = "写评论";
+"Write A Review" = "Bir değerlendirme yazın";
 
