--- a/Plugins/Settings/Settings_ios/Settings/vi.lproj/Localizable.strings
+++ b/Plugins/Settings/Settings_ios/Settings/vi.lproj/Localizable.strings
@@ -1,45 +1,45 @@
 /* First letter in alphabet */
-"A" = "一个";
+"A" = "A";
 
 /* Bibles view page title
    Section heading for Bibles in one lang */
-"Bibles" = "圣经";
+"Bibles" = "Kinh Thánh";
 
 /* Bibles search bar */
-"Find Bibles" = "找圣经";
+"Find Bibles" = "Tìm Kinh Thánh";
 
 /* Languages search bar */
-"Find Languages" = "查找语言";
+"Find Languages" = "Tìm ngôn ngữ";
 
 /* User text in message to other */
-"I like it!" = "我喜欢！";
+"I like it!" = "Tôi thích nó!";
 
 /* Clickable cell title
    Languages view page title */
-"Languages" = "语言";
+"Languages" = "Ngôn ngữ";
 
 /* Section heading for available Bibles */
-"More Bibles" = "更多圣经";
+"More Bibles" = "Thêm Kinh Thánh";
 
 /* Section heading for Other languages */
-"More Languages" = "更多语言";
+"More Languages" = "Thêm ngôn ngữ";
 
 /* Section heading for User selected Bibles */
-"My Bibles" = "我的圣经";
+"My Bibles" = "Kinh thánh của tôi";
 
 /* Section heading for User languages */
-"My Languages" = "我的语言";
+"My Languages" = "Ngôn ngữ của tôi";
 
 /* Clickable cell title
    Feedback view title */
-"Send Us Feedback" = "向我们发送反馈";
+"Send Us Feedback" = "Gửi phản hồi cho chúng tôi";
 
 /* Settings view page title */
-"Settings" = "设置";
+"Settings" = "Cài đặt";
 
 /* Clickable cell title */
-"Share SafeBible" = "分享SafeBible";
+"Share SafeBible" = "Chia sẻ SafeBible";
 
 /* Clickable cell title */
-"Write A Review" = "写评论";
+"Write A Review" = "Viết đánh giá";
 
