--- a/SafeBible2/SafeBible_ios/SafeBible/it.lproj/Localizable.strings
+++ b/SafeBible2/SafeBible_ios/SafeBible/it.lproj/Localizable.strings
@@ -45,8 +45,19 @@
 /* Menu option Highlight Text */
 "Highlight" = "Evidenziare";
 
+/* Button to display History
+   History Cell Title
+   History view page title */
+"History" = "";
+
 /* User text in message to other */
 "I like it!" = "Mi piace!";
+
+/* Languages view page title */
+"Languages" = "";
+
+/* Menu view page title */
+"Menu" = "";
 
 /* Clickable cell title */
 "More Bibles" = "Più bibbie";
